CMAKE_MINIMUM_REQUIRED( VERSION 3.5.1 )

ADD_DEFINITIONS( -std=c++11 )

FIND_PACKAGE( Threads )

SET( EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin" )

AUX_SOURCE_DIRECTORY( ${PROJECT_SOURCE_DIR}/test/publish_test test_src )

INCLUDE_DIRECTORIES( "${PROJECT_SOURCE_DIR}/pcs/include" )

LINK_DIRECTORIES( "${PROJECT_BINARY_DIR}/lib" )

ADD_EXECUTABLE( mytest ${test_src} )

TARGET_LINK_LIBRARIES( mytest libpcs.a  ${CMAKE_THREAD_LIBS_INIT} ) 
